--- a/Owncloud iOs Client/Tabs/FileTab/SimpleFileList/SimpleFileListTableViewController.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/SimpleFileList/SimpleFileListTableViewController.xib
@@ -6,18 +6,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SimpleFileListTableViewController">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="tableView" destination="6MR-Xj-fa5" id="gTK-pG-vSA"/>
+                <outlet property="view" destination="M9E-sO-cdU" id="EVt-OE-buS"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="i5M-Pr-FkT">
+        <view contentMode="scaleToFill" id="M9E-sO-cdU">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="6MR-Xj-fa5">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Yth-HW-BG7"/>
+                        <outlet property="delegate" destination="-1" id="MEY-GX-wJc"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <connections>
-                <outlet property="dataSource" destination="-1" id="Tng-2m-Rnh"/>
-                <outlet property="delegate" destination="-1" id="9aC-8N-iBw"/>
-            </connections>
-        </tableView>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="6MR-Xj-fa5" secondAttribute="bottom" id="4NA-IA-u26"/>
+                <constraint firstItem="6MR-Xj-fa5" firstAttribute="top" secondItem="M9E-sO-cdU" secondAttribute="top" id="FbF-sO-Gqk"/>
+                <constraint firstItem="6MR-Xj-fa5" firstAttribute="leading" secondItem="M9E-sO-cdU" secondAttribute="leading" id="LDg-XX-bSW"/>
+                <constraint firstAttribute="trailing" secondItem="6MR-Xj-fa5" secondAttribute="trailing" id="XKG-bS-C3k"/>
+            </constraints>
+            <point key="canvasLocation" x="435" y="416"/>
+        </view>
     </objects>
 </document>
