Added the SimpleFileListTableViewController on the SelectFolderViewController

--- a/Owncloud iOs Client/Tabs/FileTab/SelectFolder/SelectFolderViewController.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/SelectFolder/SelectFolderViewController.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SelectFolderViewController">
             <connections>
                 <outlet property="chooseButton" destination="10" id="13"/>
                 <outlet property="createButton" destination="5" id="14"/>
-                <outlet property="folderTableView" destination="6" id="7"/>
+                <outlet property="tableView" destination="6" id="Lw7-Yw-qIC"/>
                 <outlet property="toolBar" destination="4" id="17"/>
                 <outlet property="toolBarLabel" destination="15" id="16"/>
                 <outlet property="view" destination="1" id="3"/>
@@ -25,8 +25,8 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="8"/>
-                        <outlet property="delegate" destination="-1" id="9"/>
+                        <outlet property="dataSource" destination="-1" id="8Ot-B1-Ifz"/>
+                        <outlet property="delegate" destination="-1" id="iMK-OH-Kro"/>
                     </connections>
                 </tableView>
                 <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="4" customClass="OCToolBar">
@@ -55,6 +55,13 @@
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <nil key="simulatedStatusBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
