--- a/ownCloudExtApp/Cells/DocumentPickerCell.xib
+++ b/ownCloudExtApp/Cells/DocumentPickerCell.xib
@@ -56,14 +56,19 @@
                         <color key="textColor" white="0.50082687039999996" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="highlightedColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R0W-iY-F4b">
-                        <rect key="frame" x="166" y="10" width="35" height="35"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R0W-iY-F4b">
+                        <rect key="frame" x="259" y="8" width="35" height="35"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="LWe-Jy-2OJ"/>
+                            <constraint firstAttribute="height" constant="35" id="W2K-HQ-1fD"/>
+                        </constraints>
                     </view>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="ajA-jy-DvN" secondAttribute="trailing" constant="-2" id="A0g-9R-uL9"/>
                     <constraint firstItem="ajA-jy-DvN" firstAttribute="leading" secondItem="IDu-X5-C6e" secondAttribute="trailing" constant="14" id="Crk-0f-j2g"/>
+                    <constraint firstItem="uyu-Jj-Uz8" firstAttribute="leading" secondItem="R0W-iY-F4b" secondAttribute="trailing" constant="8" id="D5y-JC-fGe"/>
                     <constraint firstItem="7vP-b6-iFI" firstAttribute="top" secondItem="V7X-iO-wsT" secondAttribute="top" id="MNh-ps-vpp"/>
                     <constraint firstItem="7vP-b6-iFI" firstAttribute="top" secondItem="Sxc-wI-TBi" secondAttribute="topMargin" constant="3" id="R4f-TQ-8W8"/>
                     <constraint firstItem="IDu-X5-C6e" firstAttribute="top" secondItem="Sxc-wI-TBi" secondAttribute="topMargin" constant="2" id="S4Q-dP-lfB"/>
@@ -71,6 +76,7 @@
                     <constraint firstAttribute="trailingMargin" secondItem="uyu-Jj-Uz8" secondAttribute="trailing" constant="-2" id="awV-4g-TPg"/>
                     <constraint firstItem="NYE-BJ-wnH" firstAttribute="top" secondItem="IDu-X5-C6e" secondAttribute="bottom" constant="2" id="fGs-Z3-T9U"/>
                     <constraint firstItem="V7X-iO-wsT" firstAttribute="leading" secondItem="Sxc-wI-TBi" secondAttribute="leadingMargin" constant="14" id="goZ-PB-xnj"/>
+                    <constraint firstItem="R0W-iY-F4b" firstAttribute="top" secondItem="ajA-jy-DvN" secondAttribute="top" id="iBe-v3-JYR"/>
                     <constraint firstItem="uyu-Jj-Uz8" firstAttribute="top" secondItem="ajA-jy-DvN" secondAttribute="bottom" constant="12" id="lTu-s5-1b6"/>
                     <constraint firstItem="uyu-Jj-Uz8" firstAttribute="top" secondItem="NYE-BJ-wnH" secondAttribute="top" id="lbX-xY-6Vl"/>
                     <constraint firstItem="IDu-X5-C6e" firstAttribute="leading" secondItem="V7X-iO-wsT" secondAttribute="trailing" constant="4" id="ngt-Fk-IQh"/>
@@ -79,6 +85,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="circularPV" destination="R0W-iY-F4b" id="gFn-pR-Xs9"/>
                 <outlet property="fileImageView" destination="7vP-b6-iFI" id="EBE-J5-VuV"/>
                 <outlet property="imageDownloaded" destination="V7X-iO-wsT" id="Hvj-j4-h2c"/>
                 <outlet property="labelInfoFile" destination="NYE-BJ-wnH" id="SbX-Of-FyA"/>
