--- a/ownCloudExtApp/Cells/DocumentPickerCell.xib
+++ b/ownCloudExtApp/Cells/DocumentPickerCell.xib
@@ -56,7 +56,7 @@
                         <color key="textColor" white="0.50082687039999996" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="highlightedColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R0W-iY-F4b">
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R0W-iY-F4b" customClass="FFCircularProgressView">
                         <rect key="frame" x="259" y="11" width="35" height="35"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
